@@ -11102,6 +11102,18 @@ used, specifying the absence of any options.
 The <facility> argument is one of the values log-user, log-daemon or log-auth.
 If it is missing, then log-user is assumed.
 
+.SS The closelog function
+
+.TP
+Syntax:
+
+  (closelog)
+
+.TP
+Description:
+
+The closelog function is a wrapper for the C function closelog.
+
 .SS The setlogmask function
 
 .TP
